# file-nest

./: .env  .gitattributes  .gitignore  Cargo.toml  README.md  bacon.toml  diesel.toml  justfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-app.yml  build.yml
api/: Cargo.toml
api/src/: db.rs  main.rs  templates.rs
api/src/events/: mod.rs  routes.rs
api/src/upload/: mod.rs
api/src/watch/: mp4.rs
api/templates/: base.html  footer.html  header.html  main.css  upload_form.html
api/templates/pages/: index.html  login.html  upload.html  watch.html
assets/: main.css
db/: Cargo.toml
db/src/: lib.rs
event-processor/: Cargo.toml  README.md
event-processor/src/: main.rs  queue.rs  runner.rs  server.rs
grpc/: Cargo.toml
libs/db/: Cargo.toml
libs/grpc/: build.rs
libs/grpc/proto/: videoprocessing.proto
libs/grpc/src/: lib.rs
libs/queue/: Cargo.toml
libs/queue/src/: lib.rs  runner.rs
migrations/: 0002_init_videos.sql  0003_upload_status_notification.sql
src/: config.rs  main.rs  templates.rs
src/upload/: mod.rs
src/watch/: mp4.rs
stream-uploader/: README.md  package.json
stream-uploader/src-tauri/: Cargo.toml  tauri.conf.json
stream-uploader/src-tauri/capabilities/: default.json
stream-uploader/src-tauri/src/: lib.rs  main.rs  obs.rs
stream-uploader/src/components/: ObsStatus.svelte
stream-uploader/src/lib/stores/: obs.ts
stream-uploader/src/routes/: +page.svelte
templates/: base.html  header.html  upload_form.html
templates/pages/: index.html  upload.html
video-processor/: Cargo.toml  README.md
video-processor/src/: job.rs  main.rs  queue.rs  runner.rs  server.rs
