[package]
name = "file-nest"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7", features = ["multipart", "tracing"] }
askama_axum = "0.4.0"
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
