[package]
name = "event-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
db = { path = "../libs/db" }
anyhow = "1.0"
grpc = { path = "../libs/grpc" }
queue = { path = "../libs/queue" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.12"
prost = "0.13"
